<resources>
    <string name="app_name">Smart Pilates Mobile App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Smart Pilates</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Ana Ekran</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="support">Destek</string>
    <string name="data_member_string">Üyelik Bilgisi</string>
    <string name="profile_string">Profil</string>
    <string name="home_string">Ana Ekran</string>
    <string name="lesson_calendar_string">Ders Takvimi</string>
    <string name="measurement_information_string">Ölçüm Bilgisi</string>
    <string name="diyet_listesi_string">Diyet Listesi</string>
    <string name="bilgi_bankasi_string">Bilgi Bankası</string>
    <string name="uzmana_sor_string">Uzmana Sor</string>
    <string name="bildirimler_string">Bildirimler</string>


    <string name="login">Giriş Yap</string>
    <string name="phoneHint">Telefon Numaranız (05XXXXXXXXX)</string>
    <string name="passwordHint">Şifre</string>
    <string name="userRight">Kişisel Verilerin işlenmesi metnini okudum ve onaylıyorum</string>
    <string name="txtCredits">
        <a href="http://www.google.com">Kişisel Verilerin işlenmesi metnini okudum ve onaylıyorum</a>
    </string>

    <string name="privacy_policy">Gizlilik Politikası</string>
    <string name="loading">yükleniyor</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="place">Yer :</string>
    <string name="time">Saat :</string>
    <string name="date">Tarih :</string>
    <string name="start_date_string">Başlangıç Tarihi :</string>
    <string name="end_date_string">Bitiş Tarihi :</string>
    <string name="complete_lesson_string">Tamamlanan Ders :</string>
    <string name="total_price_string">Toplam Tutar :</string>
    <string name="name_string">Adınız : </string>
    <string name="surname_string">Soyadınız : </string>
    <string name="mail_string">Email :</string>
    <string name="phone_number_string">Telefon Numaranız :</string>
    <string name="birth_date_string">Doğum Tarihi :</string>
    <string name="address_string">Adress :</string>
    <string name="notes_string">Notlar :</string>
    <string name="kilo_string">Kilo:</string>
    <string name="boy_string">Boy:</string>
    <string name="yag_orani_string">Yağ Oranı:</string>
    <string name="kas_orani_string">Kas Oranı:</string>
    <string name="bel_string">Bel:</string>
    <string name="gogus_string">Göğüs:</string>
    <string name="kalca_string">Kalça:</string>
    <string name="karin_string">Karın:</string>
    <string name="basen_string">Basen:</string>
    <string name="omuz_string">Omuz:</string>
    <string name="sag_bacak">Sağ Bacak:</string>
    <string name="sol_bacak">Sol Bacak:</string>
    <string name="sag_kol">Sağ Kol:</string>
    <string name="sol_kol">Sol Kol:</string>
    <string name="notlar">Notlar:</string>

    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="anamnez_string">Kayıt Esnasında size özel hazırlanan anamnez raporunuzu görüntüleyebilirsiniz</string>
    <string name="raporu_goruntule">Raporu Görüntüle</string>
    <string name="anamnez_content">Kayıt Esnasında size özel hazırlanan anamnez raporunuzu görüntüleyebilirsiniz</string>
    <string name="egzersiz">EGZERSİZ</string>
    <string name="beslenme">BESLENME</string>
    <string name="saglik">SAĞLIK</string>
    <string name="filter">Filtrele</string>
    <string name="all_category">Tüm Kategori</string>
    <string name="uzmana_sor_header">Psikolojik ,sağlık ,egzersiz ve beslenme ile ilgili sorularınızı uzmanlarımıza sorabilirsiniz. Hizmet kalitemiz gereği 48 saat içerisinde mesajınız cevaplanacaktır.</string>
    <string name="send_message">Mesajı Gönder</string>
    <string name="mesaj_title">Mesajınızın Konusu</string>
    <string name="escape">Çıkış Yap</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="gelecek_dersler">Gelecek Dersler</string>
    <string name="gecmis_dersler">Geçmiş Dersler</string>

</resources>
