<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.smartpilates.mobile.fragmentsUi.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >

        <action
            android:id="@+id/action_nav_home_to_nav_lesson_calendar"
            app:destination="@id/nav_lesson_calendar" />
        <action
            android:id="@+id/action_nav_home_to_nav_member_data"
            app:destination="@id/nav_member_data" />
        <action
            android:id="@+id/action_nav_home_to_nav_measurement_information"
            app:destination="@id/nav_measurement_information" />
        <action
            android:id="@+id/action_nav_home_to_nav_diyet_list"
            app:destination="@id/nav_diyet_list" />
        <action
            android:id="@+id/action_nav_home_to_nav_bilgi_bankasi"
            app:destination="@id/nav_bilgi_bankasi" />
        <action
            android:id="@+id/action_nav_home_to_nav_uzmana_sor"
            app:destination="@id/nav_uzmana_sor" />
        <action
            android:id="@+id/action_nav_home_to_nav_profile"
            app:destination="@id/nav_profile" />
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.smartpilates.mobile.fragmentsUi.gallery.GalleryFragment"
        android:label="@string/profile_string"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_member_data"
        android:name="com.smartpilates.mobile.fragmentsUi.slideshow.SlideshowFragment"
        android:label="@string/data_member_string"
        tools:layout="@layout/fragment_member_data" />

    <fragment
        android:id="@+id/nav_lesson_calendar"
        android:name="com.smartpilates.mobile.fragmentsUi.lessons.LessonFragment"
        android:label="@string/lesson_calendar_string"
        tools:layout="@layout/fragment_lesson_calendar" />


    <fragment
        android:id="@+id/nav_share"
        android:name="com.smartpilates.mobile.fragmentsUi.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.smartpilates.mobile.fragmentsUi.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/nav_measurement_information"
        android:name="com.smartpilates.mobile.fragmentsUi.MeasurementFragment"
        android:label="@string/measurement_information_string"
        tools:layout="@layout/fragment_measurement" />
    <fragment
        android:id="@+id/nav_diyet_list"
        android:name="com.smartpilates.mobile.fragmentsUi.DietListesiFragment"
        android:label="@string/diyet_listesi_string"
        tools:layout="@layout/fragment_diet_listesi" />
    <fragment
        android:id="@+id/nav_bilgi_bankasi"
        android:name="com.smartpilates.mobile.fragmentsUi.BilgiBankasiFragment"
        android:label="@string/bilgi_bankasi_string"
        tools:layout="@layout/fragment_bilgi_bankasi" />
    <fragment
        android:id="@+id/nav_uzmana_sor"
        android:name="com.smartpilates.mobile.fragmentsUi.UzmanaSorFragment"
        android:label="@string/uzmana_sor_string"
        tools:layout="@layout/fragment_uzmana_sor" />
    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.smartpilates.mobile.fragmentsUi.BildirimlerFragment"
        android:label="@string/bildirimler_string"
        tools:layout="@layout/fragment_bildirimler" />
</navigation>