<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:visible="false"
        android:icon="@drawable/ic_filter"
        android:id="@+id/action_filter_bilgi_bank"
        android:orderInCategory="1"
        android:title="@string/filter"
        app:showAsAction="ifRoom" />
    <item
        android:visible="false"
        android:id="@+id/action_settings"
        android:orderInCategory="2"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:iconTint="@android:color/white"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:visible="false"
        android:id="@+id/action_quit_are_you_sure"
        android:orderInCategory="3"
        android:title="@string/escape"
        app:showAsAction="always" />

</menu>
