<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    android:gravity="center"
    android:padding="20dp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentsUi.uzmanaSor.UzmanaSorFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:layout_marginBottom="10dp"
        android:src="@drawable/logo"
        android:layout_width="match_parent"
        android:layout_height="80dp">

    </ImageView>
    <TextView
        android:textSize="12sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uzmana_sor_header" />


    <EditText
        android:id="@+id/subjectUzmanaSorTxt"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="30dp"
        android:hint="@string/mesaj_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </EditText>

    <EditText
        android:id="@+id/messageUzmanaSorTxt"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="200dp">
    </EditText>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sendUzmanaSorBtn"
        app:iconGravity="textStart"
        app:icon="@drawable/ic_send"
        android:text="@string/send_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.google.android.material.button.MaterialButton>

</LinearLayout>