<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    android:background="@android:color/white"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.AppCompatImageView
        android:src="@drawable/logo_big"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </androidx.appcompat.widget.AppCompatImageView>



    <androidx.cardview.widget.CardView
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="10dp"
        android:elevation="5dp"
        app:cardCornerRadius="5dp"
        android:backgroundTint="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_margin="@dimen/card_text_margin"
            android:gravity="center"
            android:text="@string/lesson_calendar_string"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </androidx.appcompat.widget.AppCompatTextView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="10dp"
        android:elevation="5dp"
        app:cardCornerRadius="5dp"
        android:backgroundTint="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_margin="@dimen/card_text_margin"
            android:gravity="center"
            android:text="@string/data_member_string"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </androidx.appcompat.widget.AppCompatTextView>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="10dp"
        android:elevation="5dp"
        app:cardCornerRadius="5dp"
        android:backgroundTint="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_margin="@dimen/card_text_margin"
            android:gravity="center"
            android:text="@string/measurement_information_string"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </androidx.appcompat.widget.AppCompatTextView>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="10dp"
        android:elevation="5dp"
        app:cardCornerRadius="5dp"
        android:backgroundTint="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_margin="@dimen/card_text_margin"
            android:gravity="center"
            android:text="@string/diyet_listesi_string"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </androidx.appcompat.widget.AppCompatTextView>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="10dp"
        android:elevation="5dp"
        app:cardCornerRadius="5dp"
        android:backgroundTint="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_margin="@dimen/card_text_margin"
            android:gravity="center"
            android:text="@string/bilgi_bankasi_string"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </androidx.appcompat.widget.AppCompatTextView>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_marginLeft="@dimen/card_text_margin"
        android:layout_marginRight="@dimen/card_text_margin"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:elevation="5dp"
            app:cardCornerRadius="5dp"
            android:backgroundTint="@color/colorAccent"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_margin="@dimen/card_text_margin"
                android:gravity="center"
                android:text="@string/uzmana_sor_string"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </androidx.appcompat.widget.AppCompatTextView>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:elevation="5dp"
            app:cardCornerRadius="5dp"
            android:backgroundTint="@color/colorAccent"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_margin="@dimen/card_text_margin"
                android:gravity="center"
                android:text="@string/profile_string"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </androidx.appcompat.widget.AppCompatTextView>
        </androidx.cardview.widget.CardView>
    </LinearLayout>




</LinearLayout>