<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/name_string" />

                <TextView
                    android:id="@+id/nameProfileTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    tools:text="Emre" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/surname_string" />

                <TextView
                    android:id="@+id/surnameProfileTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    tools:text="Ergün" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/mail_string" />

                <TextView
                    android:id="@+id/mailProfileTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    tools:text="emreergn7@gmail.com" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/phone_number_string" />

                <TextView
                    android:id="@+id/phoneNumberProfileTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    tools:text="05xxxxxxxxxx" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/birth_date_string" />

                <TextView
                    android:id="@+id/bornDateProfileTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    tools:text="1999-01-01" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/address_string" />

                <TextView
                    android:id="@+id/adressProfileTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    tools:text="Fethiye / Muğla" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/notes_string" />

                <TextView
                    android:id="@+id/notesProfileTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    tools:text="..." />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>