<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:padding="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">
        <TextView
            android:gravity="center_vertical"
            android:textSize="30sp"
            android:textStyle="bold"
            android:padding="5dp"
            android:text="Ahmet Eker"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </TextView>

        <ImageView
            android:layout_alignParentRight="true"
            android:src="@drawable/logo_big"
            android:layout_width="100dp"
            android:layout_height="100dp">

        </ImageView>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        tools:listitem="@layout/notif_card_item"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="150dp">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:background="@drawable/gradiant_blue"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:elevation="4dp"
                android:layout_margin="3dp"
                app:cardCornerRadius="5dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <TextView
                    android:padding="30dp"
                    android:drawableTop="@drawable/ic_calendar"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/lesson_calendar_string"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </TextView>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:elevation="4dp"
                android:layout_margin="3dp"
                app:cardCornerRadius="5dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <TextView
                    android:padding="30dp"
                    android:drawableTop="@drawable/ic_data_member"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/data_member_string"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </TextView>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:elevation="4dp"
                android:layout_margin="3dp"
                app:cardCornerRadius="5dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <TextView
                    android:padding="30dp"
                    android:drawableTop="@drawable/ic_home"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/measurement_information_string"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </TextView>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:elevation="4dp"
                android:layout_margin="3dp"
                app:cardCornerRadius="5dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <TextView
                    android:padding="30dp"
                    android:drawableTop="@drawable/ic_home"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/diyet_listesi_string"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </TextView>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout

            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:elevation="4dp"
                android:layout_margin="3dp"
                app:cardCornerRadius="5dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <TextView
                    android:padding="30dp"
                    android:drawableTop="@drawable/ic_home"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/bilgi_bankasi_string"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </TextView>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:elevation="4dp"
                android:layout_margin="3dp"
                app:cardCornerRadius="5dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <TextView
                    android:padding="30dp"
                    android:drawableTop="@drawable/ic_home"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/profile_string"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </TextView>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout

            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:elevation="4dp"
                android:layout_margin="3dp"
                app:cardCornerRadius="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:padding="30dp"
                    android:drawableTop="@drawable/ic_home"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/uzmana_sor_string"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </TextView>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>